--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,8 +1,18 @@
 div.header {
+  text-align: center;
+  @media screen and (max-width: 600px){
+    width: 95%;
+    margin: 0 auto;
+  }
   h1 {
     font-size: 3rem;
+    @media screen and (max-width: 600px){
+      font-size: 1.6rem;
+    }
   }
   h2 {
-
+    @media screen and (max-width: 600px){
+      font-size: .9rem;
+    }
   }
 }
