--- a/src/components/Comic/Desktop/styles.scss
+++ b/src/components/Comic/Desktop/styles.scss
@@ -1,3 +1,4 @@
+.styles :global {
   #g-Desktop-box .g-artboard {
     margin:0 auto;
   }
@@ -45,3 +46,4 @@
   #g-Panel1-Desktop .g-pstyle1 {
     text-align:center;
   }
+}
