--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,19 +1,20 @@
 div.header {
   text-align: center;
   @media screen and (max-width: 600px){
-    width: 95%;
-    margin: 0 auto;
+    margin: 0px 20px 8px;
   }
   h1 {
     margin-top: 0px;
     font-size: 3rem;
     @media screen and (max-width: 600px){
       font-size: 1.6rem;
+      line-height: 1.3;
     }
   }
   h2 {
     @media screen and (max-width: 600px){
       font-size: .9rem;
+      line-height: 1.3;
     }
   }
 
